@@ -1,3 +1,7 @@
+2012-02-05 Daniel Dressler <danieru.dressler@gmail.com>
+	* lib/Foomatic/filters/xml/to.pm, lib/Foomatic/DB.pm:
+	  Moved xml generation functionality to filter.
+
 2012-01-30 Daniel Dressler <danieru.dressler@gmail.com>
 	* lib/Foomatic/filters/sql/from.pm: Added initial pull_option()
 	  loop. So far only pulls basic data from the sql db.
